--- a/src/components/Portfolio/Portfolio.module.css
+++ b/src/components/Portfolio/Portfolio.module.css
@@ -1,16 +1,66 @@
 .portfolio {
-  
+  display: flex;
+  justify-content: center;
 
-    height: 100vh;
+  gap: 20px;
 
-    color: azure;
-    
-    background-color: rgb(50, 31, 255);
-    }
+  /* height: 100vh; */
+
+  color: azure;
+
+  background-color: rgb(50, 31, 255);
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  width: 100%;
+  margin: 0 auto;
+  padding: 20px 20px 40px 20px;
+}
+
+.title {
+  font-size: 25px;
+  margin-bottom: 20px;
+}
+
+.text {
+  margin-top: 25px;
+  margin-bottom: 15px;
+}
+.portfolioBox {
+  display: flex;
+  flex-direction: column;
+}
+
+.pictures {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 
-    .container {
-        width: 100%;
-        margin: 0 auto;
-        padding: 20px ;
-      }
+.picturesImg {
+  display: inline-block;
+  width: 250px;
+  /* margin-bottom: 20px; */
+  gap: 20px;
+
+  border-radius: 8px;
+
+  box-shadow: 4px 7px 7px 1px #080832ad;
+  transition: 0.5s;
+
+  /* background-image: -webkit-gradient(linear, left top, right top, from(rgba(47,48,58,0.4)), to(rgba(47,48,58,0.4))) */
+}
+
+.picturesImg:hover,
+.picturesImg:focus {
+  box-shadow: 12px 30px 13px 0px #080832ad;
+  transform: scale(1.02);
+  transition: 0.25s;
+
+  /* box-shadow: 3px 6px 19px 3px #080832ad; */
+}
