--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -42,7 +42,8 @@
   transform: scale(1.1);
   transition: 0.5s;
 
-  box-shadow: rgb(0 0 0 / 43%) 12px 13px 6px 3px, rgb(0 0 0 / 79%) 0px 34px 13px -3px inset, rgb(0 0 0 / 0%) 0px 36px 68px 0px inset, rgb(0 0 0 / 6%) 0px 2px 0px, rgb(0 0 0 / 0%) 0px 4px 2px, rgb(0 0 0 / 0%) 0px 8px 4px, rgb(0 0 0 / 7%) 0px 16px 8px, rgb(0 0 0 / 5%) 0px 32px 16px;
+  box-shadow: rgb(0 0 0 / 15%) 1px 3px 27px 3px,
+   rgb(0 0 0 / 41%) 0px 34px 13px -3px inset;
 }
 
 .wrapper {
