--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -15,8 +15,9 @@
         padding: 20px 0;
       }
 .home img {
+    margin: 20px 0;
     
     border-radius: 4px;
-    box-shadow: 15px 19px 8px 4px rgb(0 0 0 / 70%);
+    box-shadow: 7px 19px 8px 4px rgb(0 0 0 / 34%)
     
 }
