--- a/src/components/Portfolio/Portfolio.module.css
+++ b/src/components/Portfolio/Portfolio.module.css
@@ -36,6 +36,7 @@
 }
 
 .pictures {
+  
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -43,6 +44,7 @@
 
 
 .picturesImg {
+  
   display: inline-block;
   width: 250px;
   /* margin-bottom: 20px; */
@@ -50,17 +52,64 @@
 
   border-radius: 8px;
 
-  box-shadow: 4px 7px 7px 1px #080832ad;
+  box-shadow: 5px 5px 7px 0px #080832a1;
   transition: 0.5s;
 
   /* background-image: -webkit-gradient(linear, left top, right top, from(rgba(47,48,58,0.4)), to(rgba(47,48,58,0.4))) */
 }
 
+
+
 .picturesImg:hover,
 .picturesImg:focus {
-  box-shadow: 12px 30px 13px 0px #080832ad;
+  box-shadow: 12px 30px 13px 0px #08083270;
   transform: scale(1.02);
   transition: 0.25s;
 
-  /* box-shadow: 3px 6px 19px 3px #080832ad; */
+  
+}
+
+/* img{
+  position: relative;
+} */
+
+/* .overlay:hover {
+  background-color: #2120202f;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #212020b4;
+  width: 100%;
+  height: 100%;
+  transition: all .3s;
+} */
+
+.icon{
+  display: grid;
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+  
+  grid-template-columns: repeat(6,1fr);
+  /* grid-template-rows: repeat(5,1fr); */
+  margin-top: 10px;
+
+  width:100%;
+
+  /* opacity: 0.7; */
+}
+
+/* .img{
+  width: 200px;
+} */
+
+.iconScale:hover,
+.iconScale:focus{
+  /* opacity: 1; */
+
+  transform: scale(1.3) translate(0%, -10%);
+
+  transition: 0.25s;
 }
