--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,36 +1,97 @@
 .about {
+  padding: 0 20px;
   color: azure;
-
   background-color: rgb(50, 31, 255);
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
 }
 
 .container {
-
   width: 100%;
   margin: 0 auto;
-  padding: 20px 20px 40px 20px ;
-
-  /* padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto; */
+  padding: 20px 0;
 }
 
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 700px;
+  }
+}
 
+@media screen and (min-width: 1280px) {
+  .container {
+    max-width: 1200px;
+  }
+}
 
-/* .about_wrapper{
-  display: inline-block;
-  
-} */
-
-h2{
+h2 {
   font-size: 18px;
   padding: 20px 0;
 }
 
 .text {
-  /* display: inline-block; */
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  padding-bottom: 10px;
+}
+
+.about_wrapper img {
+  border-radius: 8px;
+  margin-bottom: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  h2 {
+    font-size: 31px;
+  }
+
+  .text {
+    font-size: 18px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .text {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+
+  .text_img {
+    width: 250px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .text {
+    font-size: 24px;
+  }
+
+  .text_img {
+    width: 400px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .about_wrapper {
+    max-width: 700px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .about_wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    gap: 75px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .aboutText {
+    max-width: 562px;
+  }
 }
