--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,96 +1,55 @@
-.container {   
-    width: 100%;
-    margin: 0 auto;
-    padding: 20px 0;
-  }
-
 .footer {
   /* grid-area: f; */
-text-align: center;
+  text-align: center;
   color: azure;
 
-
-  /* background-color: rgb(4, 0, 52); */
-  /* padding: 60px 0; */
   background: rgb(12, 11, 42);
 }
 
+.container {
+  width: 100%;
+  margin: 0 auto;
+  padding: 20px 0;
+}
 
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 700px;
+  }
+}
 
-
-
-/* link {
-  text-decoration: none;
-  color: currentColor;
-} */
-
-/* .footer {
-  padding: 60px 0;
-  background: rgb(12, 11, 42);
-} */
-/* footer */
+@media screen and (min-width: 1280px) {
+  .container {
+    max-width: 1200px;
+  }
+}
 
 .footerSocial {
-    margin-top: 30px;
-    margin-bottom: 45px;
-
-  /* @media (min-width: 768px) {
-    margin-top: 10px;
-    margin-bottom: 0px;
-  }
-
-  @media (min-width: 1200px) {
-    margin-top: 10px;
-    margin-bottom: 0px;
-  } */
+  margin-top: 30px;
+  margin-bottom: 45px;
 }
-
-/* .page-footer__vraper {
-  @media screen and (min-width: 768px) {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-} */
 
 .pageFooter {
   padding: 60px 0;
   background-color: #2f303a;
-
-  /* @media (min-width: 1200px) {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  } */
- 
 }
 
 .pageFooter__box {
-    justify-content: flex-start;
-    align-items: baseline;
+  justify-content: flex-start;
+  align-items: baseline;
+}
 
-    /* @media (max-width: 1199px) {
-      text-align: center;
-    }
-
-    @media (min-width: 480px) {
-      display: block;
-    }
-
-    @media (min-width: 1200px) {
-      display: flex;
-    } */
+@media screen and (min-width: 768px) {
+  .footerBox {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
   }
-
-  /* .page-footer__logo-address {
-    @media (min-width: 1200px) {
-      margin-right: 70px;
-    }
-  } */
-/* logo */
+}
 
 .logo {
-    display: inline-block;
-    margin-top: 20px;
+  display: inline-block;
+  margin-top: 30px;
   letter-spacing: 0.03em;
   color: #2196f3;
   font-family: Raleway;
@@ -103,6 +62,12 @@ text-align: center;
   text-shadow: 0px 0px 18px #382ca7;
 
   -webkit-text-stroke: 0.2px #a9d9ff;
+}
+
+@media screen and (min-width: 768px) {
+  .logo {
+    font-size: 30px;
+  }
 }
 
 /* Address */
@@ -124,6 +89,12 @@ text-align: center;
   text-decoration: none;
 }
 
+@media screen and (min-width: 1280px) {
+  .pageFooter__links {
+    font-size: 20px;
+  }
+}
+
 .footerSocial__slogan {
   margin-bottom: 20px;
   font-weight: 700;
@@ -134,14 +105,11 @@ text-align: center;
   color: white;
 }
 
-/* .page-footer__input {
-       display: flex;   
-       align-items: center;
-     
-       @media screen and (max-width: 1199px) {
-         flex-direction: column;
-       }
-     } */
+@media screen and (min-width: 1280px) {
+  .footerSocial__slogan {
+    font-size: 20px;
+  }
+}
 
 /* social */
 
@@ -163,21 +131,15 @@ text-align: center;
   height: 44px;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
+  color: white;
+
   cursor: pointer;
 
   transition: 1s;
-
-  /* transition: fill rgba(0.4, 0, 0.2, 1); */
- 
-
-  /* --transition: rgba(0.4, 0, 0.2, 1);
-           --transform: 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
-
 
 .socialRow__link:hover,
 .socialRow__link:focus {
-  /* transition: background-color 350ms cubic-bezier(0.4, 0, 0.2, 1); */
   background-color: #2196f3;
   box-shadow: 0px 0px 20px 17px #241e5a70;
 
@@ -186,30 +148,14 @@ text-align: center;
   transition: 0.25s;
 }
 
-
-
-/* .social-row__link:hover{
-        transform: scale(1.1);
-        transition: 0.25s;
-      }
-      */
-
-
-
 .socialRow__linkWhite {
   fill: #ffffff;
-/* 
-   &:hover,
-   &:focus{
-     fill: rgb(255, 255, 255);
-     transition: transform 5000ms linear;
-   } */
 }
-
 
 .copyright {
   display: flex;
- 
-  margin-bottom: 30px;
+
+  margin-bottom: 10px;
   color: #ffffff80;
+  font-size: 14px;
 }
