--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,29 +1,52 @@
+.header {
+  font-size: 18px;
+  background-color: #1b0c53;
+}
+
 .container {
   width: 100%;
   margin: 0 auto;
-  /* padding: 20px 0; */
 }
 
-.header {
-  /* grid-area: h; */
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+    padding: 0 20px;
+  }
+}
 
-  font-size: 18px;
-
-  /* padding: 0 1rem; */
-  background-color: #1b0c53;
+@media screen and (min-width: 1280px) {
+  .container {
+    width: 1200px;
+    padding: 0 20px;
+  }
 }
 
 .header a {
   display: inline-block;
   text-decoration: none;
   color: rgb(167 188 255);
-  /* padding:  1rem; */
+
+  font-size: 17px;
+
   padding: 10px;
   transition: 0.5s;
 }
 
- a:hover,
- a:focus {
+@media screen and (min-width: 768px) {
+  .header a:not(last-child) {
+    margin-right: 50px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .header a {
+    font-size: 30px;
+  }
+}
+
+.header a:hover,
+.header a:focus {
   color: rgb(255, 255, 255);
 
   transition: 0.5s;
@@ -31,8 +54,8 @@
 
 .active {
   border-radius: 4px;
-  border-bottom: 1px solid rgb(255, 0, 0);
-  background-color:  rgb(0 0 255);
+  border-bottom: 3px solid rgb(255, 0, 0);
+  background-color: rgb(0 0 255);
   color: white;
 
   backdrop-filter: blur(9.5px);
@@ -43,7 +66,7 @@
   transition: 0.5s;
 
   box-shadow: rgb(0 0 0 / 15%) 1px 3px 27px 3px,
-   rgb(0 0 0 / 41%) 0px 34px 13px -3px inset;
+    rgb(0 0 0 / 41%) 0px 34px 13px -3px inset;
 }
 
 .wrapper {
@@ -51,15 +74,27 @@
   align-items: center;
 }
 
+@media screen and (min-width: 768px) {
+  .wrapper {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
 .logo {
   padding: 0;
   width: 65px;
   height: 85px;
-  /* fill: aliceblue; */
 
-  /* stroke: 1px rgb(255, 255, 255); */
   animation: rotateY 4000ms infinite alternate backwards ease-in-out 4000ms;
   padding-bottom: 20px;
+}
+
+@media screen and (min-width: 1280px) {
+  .logo {
+    width: 104px;
+    height: 155px;
+  }
 }
 
 @keyframes rotateY {
