--- a/src/components/Portfolio/Portfolio.module.css
+++ b/src/components/Portfolio/Portfolio.module.css
@@ -1,11 +1,7 @@
 .portfolio {
   display: flex;
   justify-content: center;
-
   gap: 20px;
-
-  /* height: 100vh; */
-
   color: azure;
 
   background-color: rgb(50, 31, 255);
@@ -21,52 +17,96 @@
   padding: 20px 20px 40px 20px;
 }
 
+@media screen and (min-width: 1280px) {
+  .container {
+    max-width: 1200px;
+  }
+}
+
 .title {
   font-size: 25px;
-  margin-bottom: 20px;
+  margin: 20px 0;
+}
+
+@media screen and (min-width: 768px) {
+  .title {
+    font-size: 30px;
+    margin: 30px 0;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .title {
+    font-size: 45px;
+    margin: 30px 0;
+  }
 }
 
 .text {
-  margin-top: 25px;
-  margin-bottom: 15px;
+  margin-bottom: 5px;
 }
+
+@media screen and (min-width: 1280px) {
+  .text {
+    margin-bottom: 5px;
+    font-size: 26px;
+  }
+}
+
 .portfolioBox {
   display: flex;
   flex-direction: column;
 }
 
+@media screen and (min-width: 768px) {
+  .portfolioBox {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    justify-content: center;
+
+    gap: 75px;
+  }
+}
+
 .pictures {
-  
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-
 .picturesImg {
-  
   display: inline-block;
+  margin-bottom: 30px;
   width: 250px;
-  /* margin-bottom: 20px; */
   gap: 20px;
 
   border-radius: 8px;
 
   box-shadow: 5px 5px 7px 0px #080832a1;
   transition: 0.5s;
-
-  /* background-image: -webkit-gradient(linear, left top, right top, from(rgba(47,48,58,0.4)), to(rgba(47,48,58,0.4))) */
 }
 
+@media screen and (min-width: 768px) {
+  .picturesImg {
+    margin-bottom: 0;
+  }
+}
 
+@media screen and (min-width: 1280px) {
+  .picturesImg {
+    margin-bottom: 30px;
+    width: 562px;
+    /* gap: 50px; */
+  }
+}
 
 .picturesImg:hover,
 .picturesImg:focus {
   box-shadow: 12px 30px 13px 0px #08083270;
   transform: scale(1.02);
   transition: 0.25s;
-
-  
 }
 
 /* img{
@@ -87,29 +127,45 @@
   transition: all .3s;
 } */
 
-.icon{
+.tehnology {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.tehnology_text {
+  font-size: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .tehnology_text {
+    font-size: 26px;
+    margin-top: 20px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .tehnology_text {
+    font-size: 34px;
+    margin-top: 20px;
+  }
+}
+
+.icon {
   display: grid;
-  grid-column-gap: 10px;
+  grid-column-gap: 25px;
   grid-row-gap: 10px;
-  
-  grid-template-columns: repeat(6,1fr);
-  /* grid-template-rows: repeat(5,1fr); */
+  grid-template-columns: repeat(6, 1fr);
   margin-top: 10px;
 
-  width:100%;
+  max-width: 500px;
 
   /* opacity: 0.7; */
 }
 
-/* .img{
-  width: 200px;
-} */
-
 .iconScale:hover,
-.iconScale:focus{
+.iconScale:focus {
   /* opacity: 1; */
-
   transform: scale(1.3) translate(0%, -10%);
-
-  transition: 0.25s;
+  transition: 0.3s;
 }
